--- a/index.html
+++ b/index.html
@@ -9,5 +9,27 @@
 		everyone but mainly for christains. Its aimed at helping christian have
 		a dedicated platform where they can be creative, connect, share and feel
 		alive in their movement with christ, as they learn and also grow.">
+		<!-- Opengraph metadata -->
+		<meta property="og:type" content="">
+		<meta property="og:site_name" content="">
+		<meta property="og:url" content="">
+		<meta property="og:title" content="">
+		<meta property="og:description" content="">
+		<meta property="og:image" content="">
+		<meta property="og:image:width" content="">
+		<meta property="og:image:height" content="">
+		<meta property="og:image:alt" content="">
+		<!-- Twitter Metadata -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="">
+		<meta name="twitter:creator" content="">
+		<meta name="twitter:image" content="">
+		<meta name="twitter:title" content="">
+		<meta name="twitter:description" content="">
+		<meta name="twitter:url" content="">
+		<!-- Title and Favicon -->
+		<title>Beedium</title>
+		<link rel="icon" href="">
 	</head>
+	<body></body>
 </html>
