LINKING THE STYLESHEET TO THE HTML PAGE

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		<!-- Title and Favicon -->
 		<title>Beedium</title>
 		<link rel="icon" href="">
+		<!-- STYLES -->
+		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body></body>
 </html>
