--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 		a dedicated platform where they can be creative, connect, share and feel
 		alive in their movement with christ, as they learn and also grow.">
 		<!-- Opengraph metadata -->
-		<meta property="og:type" content="">
-		<meta property="og:site_name" content="">
-		<meta property="og:url" content="">
-		<meta property="og:title" content="">
-		<meta property="og:description" content="">
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="Beedium">
+		<meta property="og:url" content="https://www.beedium.com">
+		<meta property="og:title" content="Beedium homepage">
+		<meta property="og:description" content="Beedium is a christian focused platform
+		for helping believers worldwide have a space where they can grow, learn, create,
+		relate, share and spread the gospel without the feeling of being away from your
+		kind of people.">
 		<meta property="og:image" content="">
 		<meta property="og:image:width" content="">
 		<meta property="og:image:height" content="">
