Adding a header element

--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
 		<!-- STYLES -->
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
-	<body></body>
+	<body>
+		<h1>Beedium</h1>
+	</body>
 </html>
